{
  "version": 4,
  "terraform_version": "1.1.1",
  "serial": 155,
  "lineage": "9c377dc6-1108-395d-08d4-3f2634797372",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:002497567426:vpc/vpc-58082030",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-44aea52c",
            "default_route_table_id": "rtb-1638dd7d",
            "default_security_group_id": "sg-06e95d7a",
            "dhcp_options_id": "dopt-f76b689f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-58082030",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-1638dd7d",
            "owner_id": "002497567426"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:loadbalancer/app/terraform-asg-example/b633087948f13db4",
            "arn_suffix": "app/terraform-asg-example/b633087948f13db4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-asg-example-333679876.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:loadbalancer/app/terraform-asg-example/b633087948f13db4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-asg-example",
            "security_groups": [
              "sg-01eb1956fb9e0a22c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-457a043f"
              },
              {
                "subnet_id": "subnet-60fcce09"
              },
              {
                "subnet_id": "subnet-c43eb388"
              }
            ],
            "subnets": [
              "subnet-457a043f",
              "subnet-60fcce09",
              "subnet-c43eb388"
            ],
            "vpc_id": "vpc-58082030",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.http_alb",
            "data.aws_subnet_ids.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:listener/app/terraform-asg-example/b633087948f13db4/273c82866b6bfdbd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: Not Found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:listener/app/terraform-asg-example/b633087948f13db4/273c82866b6bfdbd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:loadbalancer/app/terraform-asg-example/b633087948f13db4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_subnet_ids.example",
            "aws_default_vpc.default",
            "aws_lb.example",
            "aws_security_group.http_alb"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:targetgroup/tf-example-lb-tg/337742d5ca988b91",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:listener-rule/app/terraform-asg-example/b633087948f13db4/273c82866b6bfdbd/8d77598cca24aa17",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:listener-rule/app/terraform-asg-example/b633087948f13db4/273c82866b6bfdbd/8d77598cca24aa17",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:listener/app/terraform-asg-example/b633087948f13db4/273c82866b6bfdbd",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb_listener.example",
            "aws_lb_target_group.test",
            "aws_security_group.http_alb",
            "data.aws_subnet_ids.example",
            "aws_default_vpc.default",
            "aws_lb.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:targetgroup/tf-example-lb-tg/337742d5ca988b91",
            "arn_suffix": "targetgroup/tf-example-lb-tg/337742d5ca988b91",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:002497567426:targetgroup/tf-example-lb-tg/337742d5ca988b91",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-58082030"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "http_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:002497567426:security-group/sg-01eb1956fb9e0a22c",
            "description": "Allow 80 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01eb1956fb9e0a22c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "80 port",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform example alb",
            "name_prefix": "",
            "owner_id": "002497567426",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-58082030"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:002497567426:security-group/sg-0c9f9f5704018a715",
            "description": "Allow 8080 inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c9f9f5704018a715",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "SSH from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-01eb1956fb9e0a22c"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform demo",
            "name_prefix": "",
            "owner_id": "002497567426",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-58082030"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.http_alb"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}